makes api work to show pokemon (first 20)

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
   <body>
     <p id="title">Pokemon Pokedex</p>
   </body>
-  <script src="script.js"></script>
+  <script src="./script.js"></script>
 </html>
