--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
   <body>
     <p id="title">Pokemon Pokedex</p>
+    <div id="test"></div>
   </body>
   <script src="./script.js"></script>
 </html>
