updates javascript to make a card class for each sprite

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <p id="title">Pokemon Pokedex</p>
-    <div id="test"></div>
+    <div id="flexContainer"></div>
   </body>
   <script src="./script.js"></script>
 </html>
