move the buttons outside the loop function to make them  activate once instead of multiple times

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <body>
     <p id="title">Pokemon Pokedex</p>
     <div id="flexContainer"></div>
+    <div id="buttonContainer"></div>
   </body>
   <script src="./script.js"></script>
 </html>
