Added a searchbar in html with css styling for the bar, placement, and text

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   </head>
   <body>
     <p id="title">Pokemon Pokedex</p>
+    <div id="searchbar">
+      <input type="text" placeholder="Enter pokemon name or id">
+    </div>
+    
     <div id="flexContainer"></div>
     <div id="buttonContainer"></div>
   </body>
