Added searchbar button with its own styling

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
   </head>
   <body>
     <p id="title">Pokemon Pokedex</p>
-    <div id="searchbar">
-      <input type="text" placeholder="Enter pokemon name or id">
+    <div id="search">
+      <input id= "searchbar"type="text" placeholder="Enter pokemon name or id">
+        <button id="searchButton" type="button">Search</button>
     </div>
     
     <div id="flexContainer"></div>
